# quickapi

./: Cargo.toml
src/: error.rs  lib.rs
src/http/: mod.rs
src/http/parser/: mod.rs  req.rs
src/router/: mod.rs
