[package]
name = "quickapi"
version = "0.0.0"
edition = "2021"
author = "nikos efthias<nikos@mugsoft.io"
repository = "https://github.com/NikosEfthias/quickapi"
descroption = "A router designed with minimal dependencies and minimal build time in mind"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
tap = "1.0.1"
thiserror = "1.0.31"

[features]
